Fixed some details

--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
                     tecnologie e linguaggi. Ho creato questo sito con lo scopo di illustrare brevemente quello su cui ho
                     lavorato.
                 </p>
-                <a href="#image-text-slider" class="d-flex align-items-center justify-content-center justify-content-md-start w-100 text-decoration-none">
+                <a href="#image-text-slider"
+                    class="d-flex align-items-center justify-content-center justify-content-md-start w-100 text-decoration-none">
                     <div class="border-0 d-flex light-blue-btn">
                     </div>
                 </a>
@@ -242,6 +243,7 @@
 
     <!-- Projects-->
     <div id="image-text-slider" class="splide py-5 px-5" aria-label="Immagini e testi">
+        <h5 class="container pb-md-2 pb-4 mb-0 white-text-title text-center">Clicca i progetti per maggiori dettagli</h5>
         <div class="splide__track">
             <ul class="splide__list">
                 <!-- SAM -->
@@ -481,24 +483,30 @@
                 class="align-items-center col-12 col-md-4 d-flex justify-content-center justify-content-md-start text-center text-md-start socialCol">
                 <div class="d-block row align-items-center justify-content-center">
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link" data-hover="instagramHover.png">
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link"
+                            data-hover="instagramHover.png">
                             <img src="icons/gmail.svg" class="iconFooter" alt="Instagram">
                         </a>
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link" target="_blank" data-hover="linkedinHover.png">
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link"
+                            target="_blank" data-hover="linkedinHover.png">
                             <img src="icons/linkedin.svg" class="iconFooter" alt="LinkedIn">
                         </a>
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank" class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://github.com/onlymiki" class="social-link" target="_blank" data-hover="gitHover.png">
+                        <a href="https://github.com/onlymiki" class="social-link" target="_blank"
+                            data-hover="gitHover.png">
                             <img src="icons/github.svg" class="iconFooter" alt="GitHub">
                         </a>
-                        <a href="https://github.com/onlymiki" target="_blank" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://github.com/onlymiki" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">only.miki</a>
                     </div>
                 </div>
             </div>
