--- a/cvedi.html
+++ b/cvedi.html
@@ -107,7 +107,7 @@
 
     <!-- Sezione immagine in alto - testo in basso -->
     <div class="container my-5 text-center">
-        <img src="/img/CVeDI/moodboard.png" class="img-fluid px-3 mb-4" alt="moodboard">
+        <img src="/img/CVeDI/moodboard.png" class="img-fluid px-md-3 mb-4" alt="moodboard">
 
         <div class="row justify-content-center">
             <div class="col-md-8 col-12">
@@ -137,8 +137,8 @@
 
     <!-- Sezione immagini -->
     <div class="align-items-center d-flex flex-column gap-4 justify-content-center px-5 my-4 w-100">
-        <img src="/img/CVeDI/info_luoghi_wf.svg" class="img-fluid px-5" alt="wireframe">
-        <img src="/img/CVeDI/user_personas.svg" class="img-fluid px-5" alt="user personas">
+        <img src="/img/CVeDI/info_luoghi_wf.svg" class="img-fluid px-md-5" alt="wireframe">
+        <img src="/img/CVeDI/user_personas.svg" class="img-fluid px-md-5" alt="user personas">
     </div>
 
     <!-- Sezione il mio contributo -->
@@ -151,8 +151,8 @@
 
     <!-- Sezione immagine -->
     <div class="align-items-center d-flex flex-column gap-4 justify-content-center px-5 my-4 w-100">
-        <img src="/img/CVeDI/home.svg" class="img-fluid px-5" alt="home">
-        <img src="/img/CVeDI/info_dettagliate.svg" class="img-fluid px-5" alt="info dettagliate">
+        <img src="/img/CVeDI/home.svg" class="img-fluid px-md-5" alt="home">
+        <img src="/img/CVeDI/info_dettagliate.svg" class="img-fluid px-md-5" alt="info dettagliate">
     </div>
 
     <!-- Separatore -->
