--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
 
                     <!-- Immagine -->
                     <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
-                        <img src="/img/miniatura_sam_special.svg" alt="miniatura progetto" class="img-fluid">
+                        <img src="/img/miniatura_sam_special.svg" alt="miniatura progetto" class="img-fluid img-carusel">
                     </div>
 
                     <!-- Testo -->
@@ -274,7 +274,7 @@
 
                     <!-- Immagine -->
                     <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
-                        <img src="/img/miniatura_ergonomia_special.svg" alt="miniatura progetto" class="img-fluid">
+                        <img src="/img/miniatura_ergonomia_special.svg" alt="miniatura progetto" class="img-fluid img-carusel">
                     </div>
 
                     <!-- Testo -->
@@ -323,7 +323,7 @@
 
                     <!-- Immagine -->
                     <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
-                        <img src="/img/miniatura_vr_special.svg" alt="miniatura progetto" class="img-fluid">
+                        <img src="/img/miniatura_vr_special.svg" alt="miniatura progetto" class="img-fluid img-carusel">
                     </div>
 
                     <!-- Testo -->
@@ -349,7 +349,7 @@
 
                     <!-- Immagine -->
                     <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
-                        <img src="/img/miniatura_web_app_special.svg" alt="miniatura progetto" class="img-fluid">
+                        <img src="/img/miniatura_web_app_special.svg" alt="miniatura progetto" class="img-fluid img-carusel">
                     </div>
 
                     <!-- Testo -->
@@ -372,7 +372,7 @@
 
                     <!-- Immagine -->
                     <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
-                        <img src="/img/miniatura_CVeDI_special.svg" alt="miniatura progetto" class="img-fluid">
+                        <img src="/img/miniatura_CVeDI_special.svg" alt="miniatura progetto" class="img-fluid img-carusel">
                     </div>
 
                     <!-- Testo -->
@@ -396,7 +396,7 @@
 
                     <!-- Immagine -->
                     <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
-                        <img src="/img/miniatura_volantino_special.svg" alt="miniatura progetto" class="img-fluid">
+                        <img src="/img/miniatura_volantino_special.svg" alt="miniatura progetto" class="img-fluid img-carusel">
                     </div>
 
                     <!-- Testo -->
@@ -417,7 +417,7 @@
 
                     <!-- Immagine -->
                     <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
-                        <img src="/img/miniatura_mbRunners_special.svg" alt="miniatura progetto" class="img-fluid">
+                        <img src="/img/miniatura_mbRunners_special.svg" alt="miniatura progetto" class="img-fluid img-carusel">
                     </div>
 
                     <!-- Testo -->
@@ -440,7 +440,7 @@
 
                     <!-- Immagine -->
                     <div class="col-12 col-md-4 d-flex justify-content-center mb-3 mb-md-0">
-                        <img src="/img/miniatura_tesi_special.png" alt="miniatura progetto" class="img-fluid">
+                        <img src="/img/miniatura_tesi_special.png" alt="miniatura progetto" class="img-fluid img-carusel">
                     </div>
 
                     <!-- Testo -->
