--- a/mbrunners.html
+++ b/mbrunners.html
@@ -96,9 +96,9 @@
     </div>
 
     <!-- Sezione immagini -->
-    <div class="align-items-center d-flex flex-column gap-4 justify-content-center my-4 w-100">
-        <img src="/img/MBRunners/sketch.svg" class="img-fluid px-3 w-50" alt="sketch">
-        <img src="/img/MBRunners/wireframe.svg" class="img-fluid px-3 w-50" alt="wireframe">
+    <div class="align-items-center container d-flex flex-column gap-4 justify-content-center my-4 w-100">
+        <img src="/img/MBRunners/sketch.svg" class="img-fluid px-3" alt="sketch">
+        <img src="/img/MBRunners/wireframe.svg" class="img-fluid px-3" alt="wireframe">
     </div>
 
     <!-- Sezione il mio contributo -->
