--- a/volantino.html
+++ b/volantino.html
@@ -57,7 +57,7 @@
     <div class="container mb-5 px-md-5">
         <div class="row">
             <div class="col-12">
-                <h4 class="white-text-title">Commisione</h4>
+                <h4 class="white-text-title">Commissione</h4>
                 <p class="white-text mb-0">Realizzare un volantino simile a quello di partenza, ma con grafica iniziale
                     rinnovata.</p>
             </div>
@@ -72,8 +72,8 @@
     </div>
 
     <div class="align-items-center d-flex flex-column gap-4 justify-content-center px-5 w-100 mb-5">
-        <img src="/img/Volantino/volantino_vecchio1.png" class="img-fluid px-5" alt="volantino interno">
-        <img src="/img/Volantino/volantino_vecchio2.png" class="img-fluid px-5" alt="volantino esterno">
+        <img src="/img/Volantino/volantino_vecchio1.png" class="img-fluid px-md-5" alt="volantino interno">
+        <img src="/img/Volantino/volantino_vecchio2.png" class="img-fluid px-md-5" alt="volantino esterno">
     </div>
 
     <div class="container mb-5 px-md-5">
@@ -83,8 +83,8 @@
     </div>
 
     <div class="align-items-center d-flex flex-column gap-4 justify-content-center px-5 w-100 mb-5">
-        <img src="/img/Volantino/volantino2.svg" class="img-fluid px-5" alt="volantino interno">
-        <img src="/img/Volantino/volantino1.svg" class="img-fluid px-5" alt="volantino esterno">
+        <img src="/img/Volantino/volantino2.svg" class="img-fluid px-md-5" alt="volantino interno">
+        <img src="/img/Volantino/volantino1.svg" class="img-fluid px-md-5" alt="volantino esterno">
     </div>
 
     <!-- Separatore -->
