--- a/vr.html
+++ b/vr.html
@@ -154,7 +154,7 @@
 
     <!-- Sezione immagine 404 -->
     <div class="container d-flex flex-column justify-content-center mb-5 w-100">
-        <video controls muted class="img-fluid px-5">
+        <video controls muted class="img-fluid px-md-5">
             <source src="/img/VR/stanza_simulazione.mp4" type="video/mp4">
             Il tuo browser non supporta la riproduzione del video.
         </video>
