--- a/webApp.html
+++ b/webApp.html
@@ -130,7 +130,7 @@
     <!-- Sezione immagini -->
     <div
         class="align-items-md-start align-items-center container d-flex flex-column flex-md-row gap-4 justify-content-center  my-4 w-100">
-        <img src="/img/WebApp/Moodboard.svg" class="img-fluid px-5" alt="Moodboard">
+        <img src="/img/WebApp/Moodboard.svg" class="img-fluid px-md-5" alt="Moodboard">
     </div>
 
     <!-- Sezione il mio contributo -->
@@ -143,7 +143,7 @@
 
     <!-- Sezione immagine 404 -->
     <div class="container d-flex flex-column justify-content-center mb-5 w-100">
-        <img src="/img/WebApp/immagine_schermate.svg" class="img-fluid px-3" alt="schermate del sito">
+        <img src="/img/WebApp/immagine_schermate.svg" class="img-fluid px-md-3" alt="schermate del sito">
     </div>
 
     <!-- Separatore -->
