--- a/tesi.html
+++ b/tesi.html
@@ -114,9 +114,9 @@
     </div>
     <!-- Sezione immagini -->
     <div
-        class="align-items-center d-flex flex-column flex-md-row gap-4 gam-md-0 justify-content-center px-md-5 my-4 w-100">
-        <img src="/img/Tesi/agenti_prima.svg" class="img-fluid px-md-3 w-50" alt="agenti prima">
-        <img src="/img/Tesi/agenti_dopo.svg" class="img-fluid px-md-3 w-50" alt="agenti dopo">
+        class="align-items-center d-flex container flex-column flex-md-row gap-4 gam-md-0 justify-content-center px-md-5 my-4 w-100">
+        <img src="/img/Tesi/agenti_prima.svg" class="img-fluid px-3" alt="agenti prima">
+        <img src="/img/Tesi/agenti_dopo.svg" class="img-fluid px-3" alt="agenti dopo">
     </div>
 
     <!-- Sezione torna alla home -->
