--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
         });
 
         miniaturaMBRunners.addEventListener("click", function () {
-            window.location.href = "mbRunners.html";
+            window.location.href = "mbrunners.html";
         });
 
         tesi.addEventListener("click", function () {
