Fixed some details

--- a/tesi.html
+++ b/tesi.html
@@ -58,8 +58,7 @@
             <div class="col-12 col-md-6">
                 <h4 class="white-text-title">Titolo stage</h4>
                 <p class="white-text mb-0"> Analisi dello stato dell'arte relativo alla creazione di virtual humans
-                    intelligenti per VR, in particolare con focus su realismo nelle animazioni e nello speech Obiettivi
-                    formativi e competenze da acquisire.
+                    intelligenti per VR, in particolare con focus su realismo nelle animazioni e nello speech.
 
                 <h4 class="white-text-title pt-3">Caratteristiche generali</h4>
                 <p class="white-text mb-3"> Ambito operativo: sviluppo e sperimentazione di modelli, metodi, strumenti e
