--- a/index.html
+++ b/index.html
@@ -257,8 +257,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">Progetto in Wordpress</h3>
-                        <p class="white-text px-3">
+                        <h3 class="white-text-title pb-2 px-md-3">Progetto in Wordpress</h3>
+                        <p class="white-text px-md-3">
                             SAM è un progetto realizzato in WordPress per la promozione della lampada solare
                             Sammanlänkad di IKEA. Il sito, sviluppato a partire dal tema “Inspiro” e personalizzato
                             tramite child theme, comprende sei pagine e un’offerta dedicata al prodotto. Ho curato in
@@ -279,8 +279,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">Progetto ergonomia cognitiva</h3>
-                        <p class="white-text px-3">
+                        <h3 class="white-text-title pb-2 px-md-3">Progetto ergonomia cognitiva</h3>
+                        <p class="white-text px-md-3">
                             Ergonomia Cognitiva è un corso universitario dedicato all’analisi e alla progettazione di
                             interfacce secondo i principi dell’HCI.
                             In gruppo abbiamo ideato Peachy, un prototipo di applicazione per la cura della pelle,
@@ -304,8 +304,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">Modellazione di un processo <br> aziendale</h3>
-                        <p class="white-text px-3">
+                        <h3 class="white-text-title pb-2 px-nd-3">Modellazione di un processo <br> aziendale</h3>
+                        <p class="white-text px-md-3">
                             Questo progetto è dedicato alla modellazione di un processo aziendale.
                             In gruppo, abbiamo analizzato e rappresentato le attività della pizzeria “La Cometa”
                             utilizzando le notazioni standard di Business Process Management (BPMN, CMMN, DMN e IFML).
@@ -328,8 +328,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">Progetto Unity</h3>
-                        <p class="white-text px-3">
+                        <h3 class="white-text-title pb-2 px-md-3">Progetto Unity</h3>
+                        <p class="white-text px-md-3">
                             In gruppo, abbiamo sviluppato un'esperienza ambientata nello spazio che si
                             articola in tre scene: l'esplorazione di un pianeta, lo svolgimento di una simulazione
                             all'interno della navicella e l'esecuzione del decollo. Il progetto è stato realizzato con
@@ -354,8 +354,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">Progetto React</h3>
-                        <p class="white-text px-3">
+                        <h3 class="white-text-title pb-2 px-md-3">Progetto React</h3>
+                        <p class="white-text px-md-3">
                             Io e il mio collega abbiamo sviluppato una Web App per la visualizzazione di cocktail che
                             sfrutta
                             l'API The CocktailDB. Il progetto è stato realizzato con l'IDE WebStorm e sviluppato
@@ -377,8 +377,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">Progetto HTML, CSS, JS <br> e Bootstrap</h3>
-                        <p class="white-text px-3">
+                        <h3 class="white-text-title pb-2 px-md-3">Progetto HTML, CSS, JS <br> e Bootstrap</h3>
+                        <p class="white-text px-md-3">
                             Io e il mio gruppo abbiamo realizzato un progetto per il corso di Comunicazione Visiva e
                             Design delle Interfacce (CVeDI), che prevedeva la progettazione e lo sviluppo di
                             un’interfaccia per totem informativi destinati ai turisti su Terra C-137, un pianeta
@@ -401,8 +401,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">Volantino pizzeria con Figma</h3>
-                        <p class="white-text px-3">
+                        <h3 class="white-text-title pb-2 px-md-3">Volantino pizzeria con Figma</h3>
+                        <p class="white-text px-md-3">
                             Commissione: Realizzare un volantino simile a quello di partenza, ma con grafica iniziale
                             rinnovata. <br>
                             Principali strumenti utilizzati: Figma, Canva.
@@ -422,8 +422,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">MB Runners sito con HTML, <br>CSS, JS e Boostrap</h3>
-                        <p class="white-text px-3 mb-0">
+                        <h3 class="white-text-title pb-2 px-md-3">MB Runners sito con HTML, <br>CSS, JS e Boostrap</h3>
+                        <p class="white-text px-md-3 mb-0">
                             Commissione: Realizzare un sito web per il club di corsa MB Runners di Monza. Il sito deve
                             contenere: Homepage, regolamento e form per entrare a far parte del club, calendario con
                             eventi, lista degli sponsor e collaborazioni. <br> Inoltre il sito dovrà essere responsive e
@@ -445,8 +445,8 @@
 
                     <!-- Testo -->
                     <div class="col-12 col-md-8 ps-md-4">
-                        <h3 class="white-text-title pb-2 px-3">Progetto Unity + JaCaMo </h3>
-                        <p class="white-text px-3">
+                        <h3 class="white-text-title pb-2 px-md-3">Progetto Unity + JaCaMo </h3>
+                        <p class="white-text px-md-3">
                             Ho scelto di svolgere lo stage nel settore della realtà virtuale dopo aver seguito il
                             corso, che ho trovato particolarmente stimolante. Durante lo stage ho avuto l'opportunità di
                             migliorare le
