--- a/mbrunners.html
+++ b/mbrunners.html
@@ -44,11 +44,22 @@
 
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
-        <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/miniatura_mbRunners.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0" alt="miniatura progetto">
-            <div class="col-12 col-md-6 display-5 white-text-title">
-                SITO per MB Runners
+        <div class="align-items-center row">
+            <a href="volantino.html" class="col-1 d-flex justify-content-start align-items-center text-decoration-none">
+                <img src="icons/arrow_left.svg" alt="freccia sinistra" style="height: 40px;">
+            </a>
+
+            <div class="col-10 row align-items-center justify-content-evenly text-center text-md-start">
+                <img src="img/miniatura_mbRunners.svg" class="col-12 col-md-5 img-fluid img-portrait pb-2 pb-md-0"
+                    alt="miniatura progetto">
+                <div class="col-12 col-md-5 display-5 white-text-title">
+                    SITO per MB Runners
+                </div>
             </div>
+
+            <a href="tesi.html" class="col-1 d-flex justify-content-end align-items-center text-decoration-none">
+                <img src="icons/arrow_right.svg" alt="freccia destra" style="height: 40px;">
+            </a>
         </div>
     </div>
 
@@ -123,7 +134,7 @@
     </div>
 
     <div class="container d-flex justify-content-center mt-5">
-        <a href="#" target="_blank" class="white-text-title h5 text-decoration-none">Clicca
+        <a href="https://www.mbrunners.it/" target="_blank" class="white-text-title h5 text-decoration-none">Clicca
             qui per vedere il sito completo</a>
     </div>
     <!-- Sezione torna alla home -->
@@ -155,7 +166,8 @@
                 <ul class="list-unstyled text-center text-md-start">
                     <li class="pb-3"><a href="index.html" class="h4 text-decoration-none">Home</a></li>
                     <li class="pb-3"><a href="index.html#aboutme" class="h4 text-decoration-none">About Me</a></li>
-                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a></li>
+                    <li class="pb-3"><a href="index.html#image-text-slider" class="h4 text-decoration-none">Projects</a>
+                    </li>
                 </ul>
             </div>
 
@@ -164,24 +176,30 @@
                 class="align-items-center col-12 col-md-4 d-flex justify-content-center justify-content-md-start text-center text-md-start socialCol">
                 <div class="d-block row align-items-center justify-content-center">
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link" data-hover="instagramHover.png">
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="social-link"
+                            data-hover="instagramHover.png">
                             <img src="icons/gmail.svg" class="iconFooter" alt="Instagram">
                         </a>
-                        <a href="mailto:michela.mariani01@gmail.com" target="_blank" class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
+                        <a href="mailto:michela.mariani01@gmail.com" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">michela.mariani01</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link" target="_blank" data-hover="linkedinHover.png">
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" class="social-link"
+                            target="_blank" data-hover="linkedinHover.png">
                             <img src="icons/linkedin.svg" class="iconFooter" alt="LinkedIn">
                         </a>
-                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank" class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
+                        <a href="https://www.linkedin.com/in/michela-mariani-6a2372271/" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">Michela Mariani</a>
                     </div>
 
                     <div class="align-items-center col d-flex gap-3 pb-3">
-                        <a href="https://github.com/onlymiki" class="social-link" target="_blank" data-hover="gitHover.png">
+                        <a href="https://github.com/onlymiki" class="social-link" target="_blank"
+                            data-hover="gitHover.png">
                             <img src="icons/github.svg" class="iconFooter" alt="GitHub">
                         </a>
-                        <a href="https://github.com/onlymiki" target="_blank" class="mb-0 text-decoration-none white-text-title">only.miki</a>
+                        <a href="https://github.com/onlymiki" target="_blank"
+                            class="mb-0 text-decoration-none white-text-title">only.miki</a>
                     </div>
                 </div>
             </div>
