--- a/sistemi.html
+++ b/sistemi.html
@@ -44,22 +44,22 @@
 
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
-        <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/miniatura_sistemi_informativi.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0" alt="miniatura progetto">
-            <div class="col-12 col-md-6 display-5 white-text-title">
-                MODELLAZIONE DI UN PROCESSO AZIENDALE
-            </div>
-            <!-- Sezione voto -->
-            <div class="d-flex justify-content-md-end justify-content-center mt-5 mt-md-0">
-                <div class="diamond-light rounded-2">
-                    <p class="m-0 pb-1 ps-1 blue-text">voto finale</p>
-                    <div class="d-flex align-items-center justify-content-center">
-                        <h4 class="no-rotate blue-text-title text-center">16</h4>
-                        <p class="no-rotate pt-3 blue-text text-center">/18</p>
-                    </div>
+        <div class="align-items-center row">
+            <a href="ergonomia.html" class="col-1 d-flex justify-content-start align-items-center text-decoration-none">
+                <img src="icons/arrow_left.svg" alt="freccia sinistra" style="height: 40px;">
+            </a>
+
+            <div class="col-10 row align-items-center justify-content-evenly text-center text-md-start">
+                <img src="img/miniatura_sistemi_informativi.svg" class="col-12 col-md-5 img-fluid img-portrait pb-2 pb-md-0"
+                    alt="miniatura progetto">
+                <div class="col-12 col-md-5 display-5 white-text-title">
+                    MODELLAZIONE DI UN PROCESSO AZIENDALE
                 </div>
             </div>
 
+            <a href="vr.html" class="col-1 d-flex justify-content-end align-items-center text-decoration-none">
+                <img src="icons/arrow_right.svg" alt="freccia destra" style="height: 40px;">
+            </a>
         </div>
     </div>
 
