--- a/volantino.html
+++ b/volantino.html
@@ -44,12 +44,22 @@
 
     <!-- Sezione presentazione progetto iniziale -->
     <div class="container my-5 px-5">
-        <div class="align-items-center justify-content-center text-center text-md-start row">
-            <img src="img/miniatura_volantino.svg" class="col-12 col-md-6 img-fluid img-portrait pb-2 pb-md-0"
-                alt="miniatura progetto">
-            <div class="col-12 col-md-6 display-5 white-text-title">
-                VOLANTINO per Pizzeria La Cometa
+        <div class="align-items-center row">
+            <a href="cvedi.html" class="col-1 d-flex justify-content-start align-items-center text-decoration-none">
+                <img src="icons/arrow_left.svg" alt="freccia sinistra" style="height: 40px;">
+            </a>
+
+            <div class="col-10 row align-items-center justify-content-evenly text-center text-md-start">
+                <img src="img/miniatura_volantino.svg" class="col-12 col-md-5 img-fluid img-portrait pb-2 pb-md-0"
+                    alt="miniatura progetto">
+                <div class="col-12 col-md-5 display-5 white-text-title">
+                    VOLANTINO per Pizzeria La Cometa
+                </div>
             </div>
+
+            <a href="mbrunners.html" class="col-1 d-flex justify-content-end align-items-center text-decoration-none">
+                <img src="icons/arrow_right.svg" alt="freccia destra" style="height: 40px;">
+            </a>
         </div>
     </div>
 
