--- a/cvedi.html
+++ b/cvedi.html
@@ -43,8 +43,8 @@
     </nav>
 
     <!-- Sezione presentazione progetto iniziale -->
-    <div class="container my-5 px-5">
-        <div class="align-items-center row">
+    <div class="container my-5 px-md-5">
+        <div class="align-items-center justify-content-center row">
             <a href="webApp.html" class="col-1 d-flex justify-content-start align-items-center text-decoration-none">
                 <img src="icons/arrow_left.svg" alt="freccia sinistra" style="height: 40px;">
             </a>
@@ -52,7 +52,7 @@
             <div class="col-10 row align-items-center justify-content-evenly text-center text-md-start">
                 <img src="img/miniatura_CVeDI.svg" class="col-12 col-md-5 img-fluid img-portrait pb-2 pb-md-0"
                     alt="miniatura progetto">
-                <div class="col-12 col-md-5 display-5 white-text-title">
+                <div class="col-12 col-md-5 display-5 white-text-title text-center">
                     PROGETTO HTML, CSS, JS E BOOTSTRAP
                 </div>
             </div>
