--- a/index.html
+++ b/index.html
@@ -590,7 +590,7 @@
                 gap: '2rem',
                 pagination: true,
                 arrows: true,
-                autoplay: false,
+                autoplay: true,
                 interval: 4000,
                 padding: 0, 
                 breakpoints: {
