Fixed text orientation

--- a/cvedi.html
+++ b/cvedi.html
@@ -52,7 +52,7 @@
             <div class="col-10 row align-items-center justify-content-evenly text-center text-md-start">
                 <img src="img/miniatura_CVeDI.svg" class="col-12 col-md-5 img-fluid img-portrait pb-2 pb-md-0"
                     alt="miniatura progetto">
-                <div class="col-12 col-md-5 display-5 white-text-title text-center">
+                <div class="col-12 col-md-5 display-5 white-text-title text-center text-md-start">
                     PROGETTO HTML, CSS, JS E BOOTSTRAP
                 </div>
             </div>
