--- a/sam.html
+++ b/sam.html
@@ -52,7 +52,7 @@
             <div class="col-10 row align-items-center justify-content-evenly text-center text-md-start">
                 <img src="img/miniatura_SAM.svg" class="col-12 col-md-5 img-fluid img-portrait pb-2 pb-md-0"
                     alt="miniatura progetto">
-                <div class="col-12 col-md-5 display-5 text-center white-text-title">
+                <div class="col-12 col-md-5 display-5 text-center white-text-title text-md-start">
                     PROGETTO IN WORDPRESS - SAM
                 </div>
             </div>
